quick fix for text going off screen

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -80,7 +80,7 @@ body {
 }
 
 .prose strong {
-    @apply text-accent-blue font-semibold;
+    @apply text-accent-orange font-bold;
 }
 
 .prose ul {
